--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        uses: sonarsource/sonarcloud-github-action@dev
+        uses: sonarsource/sonarcloud-github-action@master
         #run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
