--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>${project.reporting.outputDirectory}/jacoco-aggregate/jacoco.xml
 		</sonar.coverage.jacoco.xmlReportPaths>
-		<sonar.organization>catenax</sonar.organization>
+		<sonar.organization>catenax-ng</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey>catenax-ng</sonar.projectKey>
+		<sonar.projectKey>catenax-ng_product-value-added-service</sonar.projectKey>
 
 	</properties>
 	<dependencies>
