--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -1,9 +1,11 @@
 name: "Sonar Cloud Analyze"
 on:
-  push:
-    branches:
-      - 'main'
-      - 'dev'
+  pull_request:
+    types: [ opened, reopened, synchronize ]
+  workflow_call:
+    secrets:
+      SONAR_TOKEN:
+        required: true
 
 env:
   JAVA_VERSION: 11
