--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -1,5 +1,9 @@
 name: "Sonar Cloud Analyze"
 on:
+  push:
+    branches:
+      - 'main'
+      - 'dev'
   pull_request:
     types: [ opened, reopened, synchronize ]
   workflow_call:
