fix some code smells

--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -15,7 +15,7 @@ env:
   JAVA_VERSION: 11
 
 jobs:
-  analyse:
+  Analysis:
     name: analyse
     runs-on: ubuntu-latest
     steps:
@@ -40,18 +40,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-#  Analysis:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Analyze with SonarCloud
-#        # You can pin the exact commit or the version.
-#        # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
-#        uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}   # Generate a token on Sonarcloud.io, add it to the secrets of this repo with the name SONAR_TOKEN (Settings > Secrets > Actions > add new repository secret)
-#        with:
-#          args: >
-#            -Dsonar.organization=catenax-ng
-#            -Dsonar.projectKey=catenax-ng_product-value-added-service
