--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   Analysis:
-    name: analyse
+    name: Analyse
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
