--- a/.github/workflows/veracode.yaml
+++ b/.github/workflows/veracode.yaml
@@ -4,8 +4,11 @@ on:
   push:
     branches:
       - main
-      - develop
-
+      - dev
+  schedule:
+    # Once a day
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   Analyze:
