--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<sonar.organization>catenax-ng</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>catenax-ng_product-value-added-service</sonar.projectKey>
-
+		<jacoco.version>0.8.7</jacoco.version>
 		<hibernate-types-55>2.12.1</hibernate-types-55>
 	</properties>
 	<dependencies>
@@ -150,6 +150,31 @@
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+			<!-- Creates test coverage report -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<formats>
+								<format>XML</format>
+							</formats>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 		<pluginManagement>
