fix header and add sonar tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   tomcat:
     relaxedPathChars: "|,{,},[,]"
     relaxedQueryChars: "|,{,},[,]"
-
+  max-http-header-size: 40KB
 
 vas:
   datasource:
