fix imports fix bugs add unit test

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -6,7 +6,19 @@ spring:
   liquibase:
     change-log: classpath:config/liquibase/master.xml
     enabled: true
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:h2:mem:vas;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    name:
+    username:
+    password:
+    hikari:
+      auto-commit: false
   jpa:
+    hibernate:
+      ddl-auto: none
+    database-platform: org.hibernate.dialect.H2Dialect
+    database: H2
     properties:
       hibernate:
         show_sql: false
