--- a/pom.xml
+++ b/pom.xml
@@ -16,19 +16,20 @@
 	<properties>
 		<java.version>11</java.version>
 		<validation-api.version>2.0.1.Final</validation-api.version>
-		<mapstruct.version>1.4.2.Final</mapstruct.version>
+		<mapstruct.version>1.5.3.Final</mapstruct.version>
 		<org.projectlombok.version>1.18.20</org.projectlombok.version>
-		<liquibase.version>4.8.0</liquibase.version>
+		<liquibase.version>4.17.1</liquibase.version>
 		<liquibase-hibernate5.version>4.6.1</liquibase-hibernate5.version>
 		<spring-boot.version>2.6.6</spring-boot.version>
-		<org.zalando.problem-spring-web>0.26.2</org.zalando.problem-spring-web>
+		<org.zalando.problem-spring-web>0.27.0</org.zalando.problem-spring-web>
 		<org.springdoc.springdoc-openapi-ui>1.6.11</org.springdoc.springdoc-openapi-ui>
+		<org.springframework.cloud>3.1.4</org.springframework.cloud>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>${project.reporting.outputDirectory}/target/jacoco-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.organization>catenax-ng</sonar.organization>
 		<sonar.projectKey>catenax-ng_product-value-added-service</sonar.projectKey>
 		<jacoco.version>0.8.7</jacoco.version>
-		<hibernate-types-55>2.12.1</hibernate-types-55>
+		<hibernate-types-55>2.20.0</hibernate-types-55>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,11 +40,11 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -109,20 +110,18 @@
 			<artifactId>hibernate-types-55</artifactId>
 			<version>${hibernate-types-55}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>${org.springframework.cloud}</version>
+		</dependency>
 	</dependencies>
 
 
 
 	<build>
+		<defaultGoal>spring-boot:run</defaultGoal>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.liquibase</groupId>
-				<artifactId>liquibase-maven-plugin</artifactId>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
