--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.tests=src/test/
 sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
 sonar.java.codeCoveragePlugin=jacoco
 sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
-sonar.coverage.exclusions=**/valueaddedservice/dto/**/*,**/valueaddedservice/domain/**/*,
+sonar.coverage.exclusions=**/valueaddedservice/dto/*.*,**/valueaddedservice/domain/*.*
