add more coverage

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -54,11 +54,13 @@ ingress:
 # @url: https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-best-practices-resource-requests-and-limits
 resources:
   limits:
-    cpu: 800m
-    memory: 2Gi
+    cpu: 1Gi
+    memory: 4Gi
   requests:
-    cpu: 300m
-    memory: 1Gi
+    cpu: 500m
+    memory: 2Gi
+
+
 
 nodeSelector: { }
 
