--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -54,11 +54,11 @@ ingress:
 # @url: https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-best-practices-resource-requests-and-limits
 resources:
   limits:
-    cpu: 800m
-    memory: 2Gi
+    cpu: 0.75
+    memory: 1.5Gi
   requests:
-    cpu: 300m
-    memory: 1Gi
+    cpu: 250m
+    memory: 512Mi
 
 
 
