--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -7,10 +7,10 @@ spring:
       on-profile: local
 
 #  datasource:
-#    username: user
+#    username:
 #    url: jdbc:postgresql://localhost:5432/database
 #    driverClassName: org.postgresql.Driver
-#    password: password
+#    password:
 #  jpa:
 #    database-platform: org.hibernate.dialect.PostgreSQLDialect
 #    properties:
