fix for veracode

--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -7,7 +7,7 @@ spring:
       on-profile: local
 
 #  datasource:
-#    username:
+#    username: postgresql
 #    url: jdbc:postgresql://localhost:5432/database
 #    driverClassName: org.postgresql.Driver
 #    password:
