--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -7,10 +7,10 @@ spring:
       on-profile: local
 
 #  datasource:
-#    username: postgresql
 #    url: jdbc:postgresql://localhost:5432/database
 #    driverClassName: org.postgresql.Driver
-#    password:
+#    username: ${vas_datasource_user}
+#    password: ${vas_datasource_pass}
 #  jpa:
 #    database-platform: org.hibernate.dialect.PostgreSQLDialect
 #    properties:
@@ -19,14 +19,12 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:h2:file:./target/h2db/db/vas;DB_CLOSE_DELAY=-1
-    username: vas
-    password:
+    username: ${vas_datasource_user}
+    password: ${vas_datasource_pass}
     hikari:
       poolName: Hikari
       auto-commit: false
-  h2:
-    console:
-      enabled: true
+
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
