--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
 		<validation-api.version>2.0.1.Final</validation-api.version>
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
 		<org.projectlombok.version>1.18.24</org.projectlombok.version>
-		<liquibase.version>4.17.1</liquibase.version>
+		<liquibase.version>4.17.2</liquibase.version>
 		<liquibase-hibernate5.version>4.6.1</liquibase-hibernate5.version>
 		<spring-boot.version>2.6.6</spring-boot.version>
 		<org.zalando.problem-spring-web>0.27.0</org.zalando.problem-spring-web>
-		<org.springdoc.springdoc-openapi-ui>1.6.11</org.springdoc.springdoc-openapi-ui>
-		<org.springframework.cloud>3.1.4</org.springframework.cloud>
+		<org.springdoc.springdoc-openapi-ui>1.6.12</org.springdoc.springdoc-openapi-ui>
+		<org.springframework.cloud>3.1.5</org.springframework.cloud>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>${project.reporting.outputDirectory}/target/jacoco-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.organization>catenax-ng</sonar.organization>
@@ -32,6 +32,8 @@
 		<jacoco.version>0.8.7</jacoco.version>
 		<hibernate-types-55>2.20.0</hibernate-types-55>
 		<org.owasp.esapi>2.5.0.0</org.owasp.esapi>
+		<spring-boot-starter-oauth2-resource-server>2.7.5</spring-boot-starter-oauth2-resource-server>
+		<h2-version>2.1.214</h2-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,6 +44,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>${h2-version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -101,6 +104,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+			<version>${spring-boot-starter-oauth2-resource-server}</version>
 		</dependency>
 
 		<dependency>
