fix pom dependencys

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,12 @@
 version: '2'
 services:
   database:
-    image: "postgres" # use latest official postgres version
+    image: postgres:latest # use latest official postgres version
     ports:
       - 5432:5432
     environment:
-        POSTGRES_USER: user
-        POSTGRES_PASSWORD: password
+        POSTGRES_USER: default
+        POSTGRES_PASSWORD: defaultpassword
         POSTGRES_DB: database
     volumes:
       - database-data:/var/lib/postgresql/data/ # persist data even if container shuts down
