--- a/src/main/resources/config/application-int.yml
+++ b/src/main/resources/config/application-int.yml
@@ -1,9 +1,9 @@
 # Spring Boot configuration
 vas:
   authentication-url:
-    token-url: https://centralidp.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token
-    jwk-set-uri: https://centralidp.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/certs
-    auth-url: https://centralidp.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/auth
+    token-url: https://centralidp.int.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token
+    jwk-set-uri: https://centralidp.int.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/certs
+    auth-url: https://centralidp.int.demo.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/auth
 
 spring:
   config:
