--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<org.owasp.esapi>2.5.0.0</org.owasp.esapi>
 		<spring-boot-starter-oauth2-resource-server>2.7.5</spring-boot-starter-oauth2-resource-server>
 		<h2-version>2.1.214</h2-version>
-		<spring-security-web>5.7.5</spring-security-web>
+		<spring-security-web-version>5.7.5</spring-security-web-version>
 
 	</properties>
 	<dependencies>
@@ -112,7 +112,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring-security-web}</version>
+			<version>${spring-security-web-version}</version>
 		</dependency>
 
 		<dependency>
