--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           sarif_file: "trivy-results1.sarif"
 
-  analyze-<REPLACE-ME container name>:
+  analyze-ghcr.io/catenax-ng/product-value-added-service:dev:
     runs-on: ubuntu-latest
     permissions:
       actions: read
