--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,17 +1,9 @@
-# Depending on the location of your Docker container
-# you need to change the path to the specific Docker registry.
-#
-name: "Trivy"
-
+name: "Trivy Scan"
 on:
   push:
-    branches: [main,dev]
-  # pull_request:
-  # The branches below must be a subset of the branches above
-  # branches: [ main ]
-  # paths-ignore:
-  #   - "**/*.md"
-  #   - "**/*.txt"
+    branches:
+      - main
+      - dev
   schedule:
     # Once a day
     - cron: "0 0 * * *"
@@ -34,7 +26,6 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: "config"
-          # ignore-unfixed: true
           exit-code: "1"
           hide-progress: false
           format: "sarif"
@@ -42,12 +33,12 @@ jobs:
           severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         if: always()
         with:
           sarif_file: "trivy-results1.sarif"
 
-  analyze-ghcr.io/catenax-ng/product-value-added-service:dev:
+  analyze-product-value-added-service:
     runs-on: ubuntu-latest
     permissions:
       actions: read
@@ -56,19 +47,14 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      # It's also possible to scan your private registry with Trivy's built-in image scan.
-      # All you have to do is set ENV vars.
-      # Docker Hub needs TRIVY_USERNAME and TRIVY_PASSWORD.
-      # You don't need to set ENV vars when downloading from a public repository.
-      # For public images, no ENV vars must be set.
       - name: Run Trivy vulnerability scanner
         if: always()
         uses: aquasecurity/trivy-action@master
         with:
           # Path to Docker image
-          image-ref: "ghcr.io/catenax-ng/product-value-added-service:dev"
+          image-ref: "docker pull ghcr.io/catenax-ng/product-value-added-service:latest"
           format: "sarif"
           output: "trivy-results2.sarif"
           exit-code: "1"
@@ -76,6 +62,6 @@ jobs:
 
       - name: Upload Trivy scan results to GitHub Security tab
         if: always()
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: "trivy-results2.sarif"
