--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -26,6 +26,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: "config"
+          # ignore-unfixed: true
           exit-code: "1"
           hide-progress: false
           format: "sarif"
@@ -49,6 +50,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # It's also possible to scan your private registry with Trivy's built-in image scan.
+      # All you have to do is set ENV vars.
+      # Docker Hub needs TRIVY_USERNAME and TRIVY_PASSWORD.
+      # You don't need to set ENV vars when downloading from a public repository.
+      # For public images, no ENV vars must be set.
       - name: Run Trivy vulnerability scanner
         if: always()
         uses: aquasecurity/trivy-action@master
