--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -60,7 +60,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           # Path to Docker image
-          image-ref: "docker pull ghcr.io/catenax-ng/product-value-added-service:latest"
+          image-ref: "docker pull ghcr.io/catenax-ng/product-value-added-service:dev"
           format: "sarif"
           output: "trivy-results2.sarif"
           exit-code: "1"
