--- a/.github/workflows/kics.yml
+++ b/.github/workflows/kics.yml
@@ -11,6 +11,7 @@ on:
   #   - "**/*.txt"
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
 
 jobs:
   analyze:
@@ -22,7 +23,7 @@ jobs:
       security-events: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: KICS scan
         uses: checkmarx/kics-github-action@master
@@ -49,7 +50,7 @@ jobs:
       # Upload findings to GitHub Advanced Security Dashboard
       - name: Upload SARIF file for GitHub Advanced Security Dashboard
         if: always()
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: kicsResults/results.sarif
           
