--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,9 +1,14 @@
-name: "Trivy Scan"
+name: "Trivy"
+
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [main]
+  # pull_request:
+  # The branches below must be a subset of the branches above
+  # branches: [ main ]
+  # paths-ignore:
+  #   - "**/*.md"
+  #   - "**/*.txt"
   schedule:
     # Once a day
     - cron: "0 0 * * *"
@@ -20,7 +25,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@master
@@ -34,7 +39,7 @@ jobs:
           severity: "CRITICAL,HIGH"
 
       - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         if: always()
         with:
           sarif_file: "trivy-results1.sarif"
@@ -48,7 +53,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       # It's also possible to scan your private registry with Trivy's built-in image scan.
       # All you have to do is set ENV vars.
@@ -60,7 +65,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           # Path to Docker image
-          image-ref: "docker pull ghcr.io/catenax-ng/product-value-added-service:dev"
+          image-ref: "ghcr.io/catenax-ng/product-value-added-service:main"
           format: "sarif"
           output: "trivy-results2.sarif"
           exit-code: "1"
@@ -68,6 +73,6 @@ jobs:
 
       - name: Upload Trivy scan results to GitHub Security tab
         if: always()
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: "trivy-results2.sarif"
