--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,8 @@
 		<spring-boot-starter-oauth2-resource-server>3.0.0</spring-boot-starter-oauth2-resource-server>
 		<h2-version>2.1.214</h2-version>
 		<spring-security-web-version>5.7.5</spring-security-web-version>
-		<postgresql-version>42.5.1</postgresql-version>
+		<postgresql-version>42.4.1</postgresql-version>
+		<jackson-databind>2.14.1</jackson-databind>
 	</properties>
 
 	<pluginRepositories>
@@ -54,6 +55,11 @@
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
 				<version>${spring-security-web-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson-databind}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -205,7 +211,7 @@
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco.version}</version>
 				<executions>
-					<execution>
+					<execution>z
 						<id>prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
