--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -23,15 +23,15 @@ version: 2.0.0
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
 
-#dependencies:
-#  - name: postgresql
-#    version:  11.*.*
-#    repository: https://charts.bitnami.com/bitnami
-#    alias: postgres
-#    condition: postgres.enabled
-#  - condition: pgadmin4.enabled
-#    name: pgadmin4
-#    repository: https://helm.runix.net
-#    version: 1.x.x
+dependencies:
+  - name: postgresql
+    version:  11.*.*
+    repository: https://charts.bitnami.com/bitnami
+    alias: postgres
+    condition: postgres.enabled
+  - condition: pgadmin4.enabled
+    name: pgadmin4
+    repository: https://helm.runix.net
+    version: 1.x.x
 
 
