--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
 		<spring-security-web-version>5.7.5</spring-security-web-version>
 		<postgresql-version>42.4.1</postgresql-version>
 		<jackson-databind>2.13.4.1</jackson-databind>
+		<jackson-databind-nullable>0.2.2</jackson-databind-nullable>
+		<wiremock-standalone-version>2.27.2</wiremock-standalone-version>
 		<snake-yaml-version>1.31</snake-yaml-version>
 		<openapi-generator-maven-plugin.version>6.2.1</openapi-generator-maven-plugin.version>
 	</properties>
@@ -178,7 +180,14 @@
 		<dependency>
 			<groupId>org.openapitools</groupId>
 			<artifactId>jackson-databind-nullable</artifactId>
-			<version>0.2.2</version>
+			<version>${jackson-databind-nullable}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock-standalone</artifactId>
+			<version>${wiremock-standalone-version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
