--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<spring-boot-starter-web-version>3.0.1</spring-boot-starter-web-version>
 		<spring-web-jar-version>6.0.3</spring-web-jar-version>
 		<hibernate-core-version>6.1.6.Final</hibernate-core-version>
+		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 
 	<pluginRepositories>
@@ -72,13 +73,6 @@
 				<artifactId>snakeyaml</artifactId>
 				<version>${snake-yaml-version}</version>
 			</dependency>
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
-				<version>4.0.1</version>
-			</dependency>
-
-
 		</dependencies>
 	</dependencyManagement>
 
@@ -93,7 +87,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>${h2-version}</version>
-			<scope>test</scope>
+<!--			<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -126,6 +120,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${validation-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
@@ -194,6 +193,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate-core-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-60</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 
 	</dependencies>
