--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - 'main'
       - 'dev'
-
+    paths:
+      - 'src/.*'
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
