--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - 'main'
       - 'dev'
+    paths:
+      - 'src/.*'
   pull_request:
     types: [ opened, reopened, synchronize ]
   workflow_call:
