--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -37,6 +37,6 @@ security:
 
 
 application:
-  host: http://localhost:8080/api/dashboard
+  host: http://localhostt:8080/api/dashboard
   partnersPoolUrl:
     legalEntities: 'https://partners-pool.dev.demo.catena-x.net/api/catena/legal-entities'
