--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -2,9 +2,7 @@ name: "Trivy"
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [main]
   # pull_request:
   # The branches below must be a subset of the branches above
   # branches: [ main ]
@@ -16,8 +14,6 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch:
   # Trigger manually
-env:
-  BRANCH_NAME: ${{ github.ref }}
 
 jobs:
   analyze-config:
