--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -2,7 +2,13 @@ name: "Trivy"
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - dev
+    paths:
+      - 'src/**'
+      - 'pom.xml'
+      - 'Dockerfile'
   # pull_request:
   # The branches below must be a subset of the branches above
   # branches: [ main ]
