--- a/charts/vas/values-int.yaml
+++ b/charts/vas/values-int.yaml
@@ -13,7 +13,7 @@ image:
   repository: ghcr.io/catenax-ng/product-value-added-service
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "main"
+  tag: "1.0.0"
   
 ingress:
   host: catenax-vas-int.demo.catena-x.net
